# tasks-manager

./: README.md  alembic.ini  docker-compose.yaml  main.py  requirements.txt  requrements.txt
alembic/: env.py
task_api/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
task_api/alembic/: env.py
task_api/alembic/versions/: 084aa9464c9f_add_created_at_column_for_each_object.py  099ba7cdae79_insert_in_bd.py  191b5c6d7f03_add_cascade_del_on_members.py  1b6a78fce076_add_status_user.py  1e7254dd9f26_.py  469c03ee0433_first.py  4db33ad8c88d_add_project_member_assign.py  6c0fb238f1ee_.py  6cb42cd6331d_fix.py  8be416cb06b5_add_null_for_tg_id.py  d59d55d415ef_add_refresh_tokens.py  e227d0ce4b9d_.py  ee0ae01107df_.py  f62772bc0fe1_add_unique_constraint.py
task_api/app/api/: depencies.py  routers.py
task_api/app/api/authorization/: endpoints.py  schemas.py
task_api/app/api/internal/: endpoints.py
task_api/app/api/tasks/: endpoints.py  schemas.py
task_api/app/api/users/: endpoints.py  schemas.py
task_api/app/auth/: routers.py
task_api/app/auth/controllers/: confirm.py  jwt.py  login.py  password.py
task_api/app/auth/depends/: services.py  validations.py
task_api/app/base/: accessor.py  base_model.py
task_api/app/broker/: __init__.py  connect.py  tasks.py
task_api/app/entity/: dto.py  user.py
task_api/app/internal/: routers.py  service.py
task_api/app/service/: task.py  user.py  utils.py
task_api/app/store/: __init__.py
task_api/app/tasks/: depends.py  routers.py
task_api/app/web/: app.py  config.py  exception.py  lifespan.py  logger.py  middlewary.py  routers.py  utils.py
task_api/app/websocket/: routers.py  template.html
task_api/scripts/: cmig.bat  loadtest.bat  upmig.bat  worker.bat  worker.sh
task_api/tests/: conftest.py
task_api/tests/fixture/: autho.py  db.py  setup.py
task_api/tests/locust/: locustfile.py
task_api/tests/test_api/: test_database.py  test_endpoints.py  test_services.py
(+201 files in other folders)
