[tool.poetry]
name = "task-api"
version = "0.1.0"
description = "API for projects"
authors = ["Artemii"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
aio-pika = "9.5.5"
aiormq = "6.8.1"
aiosmtplib = "4.0.1"
alembic = "1.16.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
asgi-lifespan = "2.1.0"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.3.0"
bcrypt = "4.3.0"
certifi = "2025.4.26"
cffi = "^1.17.1"
click = "8.2.1"
colorama = "0.4.6"
dnspython = "2.7.0"
email-validator = "2.2.0"
exceptiongroup = "1.3.0"
fastapi = "0.115.12"
greenlet = "3.2.3"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
importlib-metadata = "8.7.0"
iniconfig = "2.1.0"
izulu = "0.50.0"
mako = "1.3.10"
markupsafe = "3.0.2"
multidict = "6.5.0"
outcome = "1.3.0.post0"
packaging = "25.0"
pamqp = "3.3.0"
passlib = "1.7.4"
pluggy = "1.6.0"
propcache = "0.3.2"
psycopg2-binary = "2.9.10"
pycparser = "2.22"
pycron = "3.2.0"
pydantic = "2.11.5"
pydantic-settings = "2.9.1"
pydantic-core = "2.33.2"
pyjwt = "2.10.1"
python-multipart = "0.0.20"
prometheus-fastapi-instrumentator = "7.1.0"
pytz = "2025.2"
redis = "6.2.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
sqlalchemy = "2.0.41"
starlette = "0.46.2"
taskiq = "0.11.17"
taskiq-aio-pika = "0.4.2"
taskiq-dependencies = "1.5.7"
taskiq-fastapi = "0.3.5"
tomli = "2.2.1"
tornado = "6.5.1"
trio = "0.30.0"
typing-inspection = "0.4.1"
typing-extensions = "4.14.0"
uvicorn = "0.34.3"
yarl = "1.20.1"
zipp = "3.23.0"
motor = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.0.0"
python-dotenv = "1.1.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pygments = "2.19.1"
locust = "^2.37.14"

[tool.poetry.scripts]
api = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
